# cedalion

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  LICENSE.md  MotionCorrectSpline_Nirs_scratch.py  README.md  cedalion.def  colab_setup.py  colab_setup.sh  colab_setup_alt.py  environment_dev.yml  environment_dev_windows.yml  environment_doc.yml  hash.py  install_nirfaster.sh  pyproject.toml  splineSG_scratch.ipynb  tInc_baselineshift_func_scratch.py  tInc_baselineshirf_Ch_Nirs_scratch.py  testing_hmrFunc.m
.github/workflows/: build_docs.yml  pytest.yml  pytest_windows.yml  run_tests.yml  run_tests_linux_mac.yml  run_tests_windows.yml
_doc/: contributing_code.md
data/ninja_cap_probe/: fullhead_56x144_System2_landmarks.tsv  fullhead_56x144_System2_measlist.pkl  fullhead_56x144_System2_optodes.tsv
data/ninja_uhd_cap_probe/: fullhead_164x496_measlist.pkl
docs/: CHANGELOG.md  LICENSE.md  Makefile  conf.py  environments.md  examples.rst  index.md  index.rst  references.bib  references.rst
docs/_static/css/: rtd_fixes.css
docs/_templates/: custom-class-template.rst  custom-module-template.rst  layout.html  versions.html
docs/community/: contributing_code.md  contributors.md  index.md  toolboxes.md
docs/data_io/: index.rst
docs/examples/: Makefile  index.md
docs/getting_started/: colab_setup.md  index.md  installation.md
docs/getting_started/contributing_code/: contributing_code.md
docs/image_reco/: index.rst
docs/machine_learning/: index.rst
docs/physio/: index.rst
docs/plot_vis/: index.rst
docs/sigproc/: index.rst
docs/synth/: index.rst
examples/: 00_test_installation.ipynb  01_SimulatingData.ipynb  02_PipelineCreation.ipynb  03_ROC_Analysis.ipynb  1010_system.ipynb  12_plots_example.ipynb  14_xarray_indexing.ipynb  20_scalp_coupling_index.ipynb  21_data_quality_and_pruning.ipynb  22_motion_artefacts_and_correction.ipynb  31_glm_basis_functions.ipynb  32_glm_fingertapping_example.ipynb  33_glm_illustrative_example.ipynb  34_store_hrfs_in_snirf_file.ipynb  40_image_reconstruction.ipynb  41_photogrammetric_optode_coregistration.ipynb  42_1010_system.ipynb  43_crs_and_headmodel.ipynb  50_finger_tapping_lda_classification.ipynb  PCArecurse_motion_correct.ipynb  Photogrammetry.ipynb  Photogrammetry_2.ipynb  align_ninja_to_colin.ipynb  ampd_finger_tapping_example.ipynb  data_quality_and_pruning.ipynb  design_matrix_example.ipynb  finger_tapping_full_pipeline.ipynb  finger_tapping_lda_classification.ipynb  glm_basis_functions.ipynb  glm_example_2.ipynb  glm_example_3.ipynb  glm_fingertapping_example.ipynb  head_models.ipynb  image_reconstruction.ipynb  indexing.ipynb  motion_artefacts_and_correction.ipynb  new_conference_example1.ipynb  new_conference_example2.ipynb  photogrammetric_optode_coregistration.ipynb  photogrammetry.ipynb  (+16 more)
examples/augmentation/: 61_synthetic_artifacts_example.ipynb  62_synthetic_hrfs_example.ipynb  syn_utils_example.ipynb
examples/getting_started_io/: 00_test_installation.ipynb  10_xarray_datastructs_fnirs.ipynb  11_recording_container.ipynb  13_data_structures_intro.ipynb  34_store_hrfs_in_snirf_file.ipynb
examples/head_models/: 40_image_reconstruction.ipynb  41_photogrammetric_optode_coregistration.ipynb  42_1010_system.ipynb  43_crs_and_headmodel.ipynb  44_head_models.ipynb  45_parcel_sensitivity.ipynb  46_precompute_fluence.ipynb  README.md
examples/machine_learning/: 50_finger_tapping_lda_classification.ipynb  51_multimodal_source_decomposition_on_synthetic_fNIRS-EEG_data.ipynb  52_ica_erbm_fingertapping_example.ipynb  ICA_ERBM_fingertapping_example.ipynb
examples/misc/: 14_xarray_indexing.ipynb  align_ninja_to_colin.ipynb  finger_tapping_full_pipeline.ipynb  head_models.ipynb
examples/modeling/: 31_glm_basis_functions.ipynb  32_glm_fingertapping_example.ipynb  33_glm_illustrative_example.ipynb  34_glm_fingertapping_nans.ipynb  35_statsmodels_overview.ipynb  36_glm_workshop.ipynb  statsmodels.ipynb
examples/physio/: 71_ampd_heartbeat.ipynb
examples/plots_visualization/: 12_plots_example.ipynb
examples/signal_quality/: 20_scalp_coupling_index.ipynb  21_data_quality_and_pruning.ipynb  22_motion_artefacts_and_correction.ipynb  23_hardware_corrections.ipynb  23_parcel_sensitivity.ipynb  23_sampling_corrections.ipynb  24_downweighting_noisy_channels.ipynb  24_variance_measnoise_proxy.ipynb  25_estimate_measurement_noise_old.ipynb  25_intro_quality_workshop.ipynb
jasmin/notebooks/preprocessing/: example_processing.ipynb
jasmin/notebooks/respiration/: inspect_respiration.ipynb  sync_resp_fnirs.ipynb
jasmin/notebooks/signal_quality/: 22_motion_artefacts_and_correction_exp.ipynb
nirfaster-uFF/demo/: .gitignore
scripts/: build_docs.sh  colab_setup.py  create_bids_structure.py  hash.py  parse_dataset.py  prefetch_docs_datasets.py  run_tasks.py
src/: FTanalysis_full.ipynb  Photogrammetry2.ipynb
src/cedalion/: __init__.py  accessors.py  data_quality_report.py  datasets.py  errors.py  nirs.py  physunits.py  plots.py  tasks.py  testing.py  typing.py  utils.py  validators.py  vtktutils.py  xrutils.py
src/cedalion/data/: 10-5-System_Mastoids_EGI129.tsv  __init__.py  measfunc_table.npy  prahl_absorption_spectrum.tsv
src/cedalion/dataclasses/: __init__.py  accessors.py  geometry.py  schemas.py  (+3 more)
tests/: test_bids.py  test_dataclasses_geometry.py  test_fwmodel.py  test_geodesics.py  test_imagereco_forward_model.py  test_imagereco_sensitivity.py  test_imagereco_solver.py  test_io_forward_model.py  test_io_nirs.py  test_io_photogrammetry.py  test_io_probe_geometry.py  test_io_snirf.py  test_labeled_points.py  test_model_glm_design_matrix.py  test_nirs.py  test_points_accessors.py  test_sigdecomp.py  test_sigdecomp_dummy.py  test_sigdecomp_multimodal_cca.py  test_sigdecomp_multimodal_mspoc.py  test_sigdecomp_multimodal_utils.py  test_sigproc_epochs.py  test_sigproc_frequency.py  test_sigproc_motion_correct.py  test_sigproc_quality.py  test_synthetic.py  test_synthetic_hrf.py  test_utils.py  test_vtkutils.py  test_xrutils.py
vis/: PlotProbe.py  PlotProbev1,0.py  vis_plotprobe.py  vis_timeseries.py
(+94 files in other folders)
