[project]
name = "cedalion"
description = "A fNIRS analysis framework"
readme = "README.md"
authors = [
    {name = "Eike Middell et al."}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic=["version"]
requires-python = ">=3.11"

[project.urls]
Home = "https://ibs-lab.com/cedalion/"
Documentation = "https://doc.ibs.tu-berlin.de/cedalion/doc/dev/"
"Source Code" = "https://github.com/ibs-lab/cedalion/"

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.vcs]
version-file = "src/cedalion/_version.py"

[tool.hatch.version]
source = "vcs"

[tool.hatch.env]
requires = [
  "hatch-conda>=0.5.2",
]


[tool.hatch.envs.default]
type = "conda"
conda-forge = true
environment-file = "environment_dev.yml"
python="3.11"

[tool.hatch.envs.default.scripts]
build_docs = "./scripts/build_docs.sh docs"
check = "pre-commit run"

[tool.hatch.envs.hatch-test]
type = "conda"
conda-forge = true
environment-file = "environment_dev.yml"
python="3.11"

[tool.ruff.lint]
select = ["E", "F", "W", "D"]

ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D101", # Missing docstring in public class # FIXME
    "D102", # Missing docstring in public method # FIXME
    "D103", # Missing docstring in public function # FIXME
    "D105", # Missing docstring in magic method # FIXME
    "D107", # Missing docstring in __init__ # FIXME
    "D202", # no blank line allowed after function docstring
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # unused imports
]
"test_*.py" = [
    "D103", # Missing docstring in public function
]

[tool.ruff.lint.pydocstyle]
convention = "google"
