[project]
name = "cedalion"
description = "A fNIRS analysis framework"
readme = "README.md"
authors = [
    {name = "Eike Middell et al."}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic=["version"]
requires-python = ">=3.11"

# This is subset of cedalion's dependencies, sufficient to run it it in a 
# Google Colab environment. For a local installation please use the conda 
# environment defined in environments_dev.yml .
dependencies = [
  "click==8.2.*",
  "h5py==3.14.*",
  "matplotlib==3.10.*",
  "nibabel==5.3.*",
  "nilearn==0.11.*",
  "numpy==2.2.*",
  "opencv-python>4",
  "pandas==2.3.*",
  "pint-xarray==0.4.*",
  "pooch==1.8.*",
  "pybids==0.19.*",
  "pywavelets==1.8.*",
  "scikit-image==0.25.*",
  "scikit-learn==1.7.*",
  "scipy==1.15.*",
  "seaborn==0.13.*",
  "statsmodels==0.14.4",
  "strenum==0.4.*",
  "xarray==2025.6.*",
  "trimesh==4.6.*",
  "pyvista==0.45.*",
  "trame==3.10.*",
  "trame-vtk==2.8.*",
  "trame-vuetify==3.0.*",
  "trame-components==2.5.*",
  "vtk>9.3",
  "ipympl",
  "mne==1.9.*",
  "mne-bids==0.16.*",
  "mne-nirs==0.7.*",
  "pywavefront==1.3.*",
  "setuptools-scm",
  "snirf==0.8.*",
  "pmcx==0.4.2",
  "pmcxcl==0.3.1",
  "pyxdf==1.17.0",
]


[project.urls]
Home = "https://ibs-lab.com/cedalion/"
Documentation = "https://doc.ibs.tu-berlin.de/cedalion/doc/dev/"
"Source Code" = "https://github.com/ibs-lab/cedalion/"

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.vcs]
version-file = "src/cedalion/_version.py"

[tool.hatch.version]
source = "vcs"

[tool.hatch.env]
requires = [
  "hatch-conda>=0.5.2",
]


[tool.hatch.envs.default]
type = "conda"
conda-forge = true
environment-file = "environment_dev.yml"
python="3.11"

[tool.hatch.envs.default.scripts]
build_docs = "./scripts/build_docs.sh docs"
check = "pre-commit run"

[tool.hatch.envs.hatch-test]
type = "conda"
conda-forge = true
environment-file = "environment_dev.yml"
python="3.11"

[tool.ruff.lint]
select = ["E", "F", "W", "D"]

ignore = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D101", # Missing docstring in public class # FIXME
    "D102", # Missing docstring in public method # FIXME
    "D103", # Missing docstring in public function # FIXME
    "D105", # Missing docstring in magic method # FIXME
    "D107", # Missing docstring in __init__ # FIXME
    "D202", # no blank line allowed after function docstring
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # unused imports
]
"test_*.py" = [
    "D103", # Missing docstring in public function
]

[tool.ruff.lint.pydocstyle]
convention = "google"
